--- a/css/ows_dashboard.css
+++ b/css/ows_dashboard.css
@@ -4,7 +4,7 @@ blockquote,pre,a,abbr,acronym,address,big,cite,code,del,
 dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,
 sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,
 form,label,legend,table,caption,tbody,tfoot,thead,tr,th,
-td{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline}
+td{margin:0;padding:0;border:0;outline:0;font-size:1.0em;vertical-align:baseline}
 body{line-height:1}
 ol,ul{list-style:none}
 blockquote,q{quotes:none}
@@ -14,7 +14,7 @@ del{text-decoration:line-through}
 table{border-collapse:collapse;border-spacing:0}
 
 /*default text*/
-body, textarea{color:#333;font:13px/1.5 'Helvetica Neue',Arial,'Liberation Sans',FreeSans,sans-serif}
+body, textarea{color:#333;font:12px/1.5 'Helvetica Neue',Arial,'Liberation Sans',FreeSans,sans-serif}
 a:focus{outline:1px dotted}
 hr{border:0 #ccc solid;border-top-width:1px;clear:both;height:0}
 h1{font-size:25px}
@@ -32,11 +32,13 @@ p,dl,hr,h1,h2,h3,h4,h5,h6,ol,ul,pre,table,address,fieldset{margin-bottom:20px}
 .grid_1 select,.grid_1 input,.grid_1 textarea{width:30px}.grid_1 select{width:40px}
 .grid_2 select,.grid_2 input,.grid_2 textarea{width:90px}.grid_2 select{width:100px}
 .grid_map select,.grid_map input,.grid_map textarea{width:90px}.grid_map select{width:100px}
+.grid_wsInfo select,.grid_wsInfo input,.grid_wsInfo textarea{width:90px}.grid_wsInfo select{width:100px}
 
 /* Make sure form elements don't break the box width */
 .grid_1 > .box select,.grid_1 > .box input,.grid_1 > .box textarea{width:8px;}
 .grid_2 > .box select,.grid_2 > .box input,.grid_2 > .box textarea{width:68px;}
 .grid_map > .box select,.grid_map > .box input,.grid_map > .box textarea{width:68px;}
+.grid_wsInfo > .box select,.grid_wsInfo > .box input,.grid_wsInfo > .box textarea{width:68px;}
 
 /* container */
 .container_16 {
@@ -48,7 +50,8 @@ p,dl,hr,h1,h2,h3,h4,h5,h6,ol,ul,pre,table,address,fieldset{margin-bottom:20px}
 /*grid global*/	
 .grid_1,
 .grid_2 ,
-.grid_map{
+.grid_map,
+.grid_wsInfo{
 	display: inline;
 	float: left;
 	margin-left: 5px;
@@ -70,19 +73,26 @@ p,dl,hr,h1,h2,h3,h4,h5,h6,ol,ul,pre,table,address,fieldset{margin-bottom:20px}
 .container_16 .grid_1, 
 .container_16 .grid_1 .box,
 .container_16 .grid_1 .glow-sortable-dropindicator {
-	width: 950px !important
+	width: 765px !important
 }
 
 .container_16 .grid_2, 
 .container_16 .grid_2 .box,
 .container_16 .grid_2 .glow-sortable-dropindicator {
-	width: 650px !important
+	width: 530px !important
 }
 
 .container_16 .grid_map, 
 .container_16 .grid_map .box,
 .container_16 .grid_map .glow-sortable-dropindicator {
-	width: 1500px !important
+	width: 700px !important
+}
+
+.container_16 .grid_wsInfo, 
+.container_16 .grid_wsInfo .box,
+.container_16 .grid_wsInfo .glow-sortable-dropindicator {
+	width: 350px !important ;
+	height: 345px;
 }
 
 
@@ -134,7 +144,7 @@ caption {
 #content {
 	margin-right:auto;
 	margin-left:auto;
-	width:100%;
+	width:1100px;
 	position:relative;
 	zoom:1;
 }
@@ -226,9 +236,9 @@ table {
 }
 
 th, td {
-	padding:7px 15px;
+	padding:5px;
 	text-align:left;
-	border: 0;
+border: 1px solid black;
 }
 
 /* Header */
@@ -238,7 +248,7 @@ th, td {
 	border:0;
 	margin:10px auto 0 auto;
 	padding:5px 30px;
-	width:100%;
+	width:1100px;
 }
 
 /* Nagivation */
@@ -265,7 +275,7 @@ th, td {
 
 #content {
 	padding:30px;
-	width: 100%;
+	width: 1100px;
 	-moz-border-radius-topleft: 10px;
 	-moz-border-radius-bottomright: 10px;
 }
@@ -583,17 +593,27 @@ a.delete {
     margin-left: 3px;
 }
 
+#impaired_content {
+float:left
+}
 
+#impaired_content a {   
+	color:#3298CB;
+}
 
 #impaired_content table,td, tr{
-width:950px;
+font-size:1em;
+width:750px;
 border: 1px solid black;
+margin: auto;
 }
 #impaired_content a.metadata 
 {   
-	color:#cccccc;
+	color:#3298CB;
 	cursor:help;	
 }
+
+
  
 #impaired_content a.description 
 {   
@@ -627,10 +647,11 @@ border: 1px solid black;
 {	background: #FFFFC1 }
  
 #impaired_content tr.impaired
-{	background: #c0c0c0 }
+{	background: #FAAFBE }
  
 #impaired_content tr.partial
 {	background: #FFC7A0 }
  
 #impaired_content tr.unassessed
 {	background: #EEEEEE }
+
